--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "yadera-gmbh",
 	"version": "0.1.0",
+	"homepage": "https://martynakiljan.github.io/yadera/",
 	"private": true,
 	"dependencies": {
 		"@fortawesome/fontawesome-svg-core": "^6.6.0",
@@ -26,6 +27,8 @@
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d build",
 		"start": "react-scripts start",
 		"build": "react-scripts build"
 	},
