--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
 		"react-dom": "^18.3.1",
 		"react-hook-form": "^7.53.1",
 		"react-icons": "^5.3.0",
+		"react-router": "^6.28.0",
+		"react-router-dom": "^6.28.0",
 		"react-scripts": "^5.0.1",
 		"react-scroll-to-top": "^3.0.0",
 		"react-spinners": "^0.14.1",
