--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "yadera-gmbh",
 	"version": "0.1.0",
-	"homepage": "https://martynakiljan.github.io/yadera/",
+	"homepage": "https://martynakiljan.github.io/yadera",
 	"private": true,
 	"dependencies": {
 		"@fortawesome/fontawesome-svg-core": "^6.6.0",
@@ -30,7 +30,7 @@
 	},
 	"scripts": {
 		"predeploy": "npm run build",
-		"deploy": "gh-pages -d build",
+		"deploy": "npm run build && gh-pages -d build",
 		"start": "react-scripts start",
 		"build": "react-scripts build"
 	},
